# vibe-learner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: desktop-preview.yml  desktop-release.yml
apps/desktop/: package.json
apps/desktop/scripts/: generate-icon-assets.mjs  prepare-bundle-assets.mjs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.mjs  package.json
apps/web-rs/: Cargo.toml
apps/web-rs/src/: main.rs
apps/web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
apps/web/components/: brand-mark.tsx  character-renderer.tsx  character-shell.tsx  debug-overlay.tsx  desktop-startup-guard.tsx  desktop-view-menu-bridge.tsx  document-debug-console.tsx  document-debug-panels.tsx  document-setup.tsx  learning-workspace-provider.tsx  learning-workspace.tsx  material-icon.tsx  mermaid-diagram.tsx  page-debug-context.tsx  page-debug-panel.tsx  persona-selector.tsx  (+11 more)
crates/vibe-learner-contracts/: Cargo.toml
docs/: README.md  api-reference.md  architecture.md  desktop-distribution-plan.md  desktop-packaging.md  desktop-roadmap.md  frontend-learning-workspace.md  learning-plan-prompt-contract.md  parsing-and-planning-data-flow.md  persona-spectrum.md  plan-text-contract.md  rust-rewrite-roadmap.md  scene-setup.md  study-chapter-and-schedule.md  user_manual.md
services/ai/: .env.example  README.md  alembic.ini  pyproject.toml
services/ai-rs/: Cargo.toml
services/ai-rs/src/: main.rs  routes.rs  state.rs  store.rs
services/ai/alembic/: env.py
services/ai/alembic/versions/: 20260413_0001_pgsql_rebuild.py
services/ai/app/: app_factory.py  main.py  sidecar.py
services/ai/app/api/: routes.py
services/ai/app/core/: bootstrap.py  logging.py  settings.py
services/ai/app/models/: api.py  domain.py
services/ai/app/persistence/: __init__.py  database.py  migrate_local_data.py  models.py  storage.py
services/ai/app/prompts/: learning_plan_prompt.txt  openai_chat_prompt.txt  openai_plan_runner_prompt.txt  openai_setting_prompt.txt  study_session_prompt.txt
services/ai/app/services/: document_parser.py  documents.py  learning_plan_chat_runtime.py  local_store.py  model_provider.py  model_recovery.py  model_tool_config.py  ocr_engine.py  openai_plan_runner.py  pedagogy.py  performance.py  persona.py  persona_cards.py  persona_runtime.py  plan_prompt.py  plan_tool_runtime.py  plans.py  prompt_loader.py  reusable_scene_nodes.py  runtime_model_probe.py  runtime_settings.py  scene_library.py  scene_setup.py  session_scene.py  storage_lifecycle.py  stream_interrupts.py  stream_reports.py  study_arrangement.py  study_chat_attachments.py  study_memory.py  study_session_chat_runtime.py  study_session_prompt.py  study_sessions.py  token_usage.py
services/ai/pyinstaller/: sidecar.spec
services/ai/tests/: test_persona_pipeline.py  test_reusable_scene_nodes.py  test_runtime_model_probe.py  test_scene_generation.py
(+45 files in other folders)
