[workspace]
members = [
  "apps/web-rs",
  "crates/vibe-learner-contracts",
  "services/ai-rs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }

