[package]
name = "vibe-learner-web-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
dioxus = { version = "0.6", features = ["router", "web"] }
gloo-net = "0.6"
serde.workspace = true
vibe-learner-contracts = { path = "../../crates/vibe-learner-contracts" }
wasm-bindgen-futures = "0.4"

