[project]
name = "gal-learner-ai"
version = "0.1.0"
description = "AI service for persona-aware learning orchestration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "PyMuPDF>=1.26.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0"
]

[tool.uv]
package = false
