[package]
name = "vibe-learner-desktop"
version = "0.1.0"
description = "Desktop shell for Vibe Learner"
edition = "2021"

[lib]
name = "vibe_learner_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
